# virtual-showroom

./: .gitignore  LICENSE  README.md  makefile
backend/: alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 2025_08_07_1343-b504233c1a0d_create_all_tables.py  2025_08_15_1815-update_user_ids_to_string.py
backend/app/: main.py
backend/app/api/: dependencies.py
backend/app/api/routes/: __init__.py  admin.py  auth.py  collections.py  files.py  products.py
backend/app/core/: api.py  config.py  database.py  decorators.py  exceptions.py  exceptions_handler.py  security_middleware.py  validation_middleware.py
backend/app/core/firebase/: auth.py
backend/app/models/: __init__.py  base.py  collection.py  file.py  product.py  user.py
backend/app/models/product/: __init__.py  image.py  product.py  size_chart.py  technical_drawing.py  technical_specification.py  variant.py
backend/app/repositories/: __init__.py  base.py  collection.py  file.py  user.py
backend/app/repositories/product/: __init__.py  repository.py
backend/app/schemas/: __init__.py  admin.py  auth.py  base.py  collection.py  file.py  product.py
backend/app/services/: __init__.py  admin.py  auth.py  base.py  collection.py  file.py
backend/app/services/product/: __init__.py  service.py
backend/scripts/: create_enhanced_models_organized.py
client/: README.md  middleware.ts  next.config.js  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
client/app/: globals.css  layout.tsx  page.tsx
client/lib/: mock-data.ts  (+1 more)
(+51 files in other folders)
